<resources>
    <string name="app_name">Joberfied</string>

    <string name="app_quote">\" You have the freedom to be </string>
    <string name="app_quote2">yourself, your true self, here and now,</string>
    <string name="app_quote3">and nothing can stand in your way.\"</string>
    <string name="app_quote4">- Richard Bach</string>


    <!--Employer Strings -->
    <string name="app_Welcome">WELCOME !</string>
    <string name="app_pinEmployer">PIN</string>
    <string name="app_passEmployer">PASSWORD</string>
    <string name="app_SubMessage">Professionalism? Commitment?</string>
    <string name="app_SubMessage_2">Let Jonathan do the Job!</string>

    <!---JobSeeker Strings -->
    <string name="app_SubMessage_Jobseeker">Get your resume noticed within minutes</string>
    <string name="app_pinJobseeker">APP PIN</string>
    <string name="app_passJobseeker">PASSWORD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Jobseeker Sample Title-->
    <string name="app_JobSeeker_Title">\" IdealProgrammer \"</string>

    <!-- Register Strings -->
    <string name="app_JobSeeker_regTitle">REGISTRATION</string>
    <string name="app_JobSeeker_regFname">First Name</string>
    <string name="app_JobSeeker_regLname">Last Name</string>
    <string name="app_JobSeeker_regEmail">Email Address</string>
    <string name="app_JobSeeker_regPass">Password</string>
    <string name="app_JobSeeker_regRepeatPass">Confirm Password</string>
    <string name="app_JobSeeker_btnRegister">Register</string>
    <string name="app_Employer_regContactNum">Contact Number</string>
    <string name="app_Employer_regCompanyName">Company Name</string>
    <string name="app_Employer_regCallTime">Best Time to Call</string>

    <!--Main Description Messages-->
    <string name="app_main_descrip_message2">Head Hunting. \nReinvented.</string>
    <string name="app_main_descrip_proto_message">For every set back is a setup for a come back.
                                                  For every rejection is fuel to your motivation.</string>

    <!-- Search Results Jobseeker-->
    <string name="search_results">\"Sorry Job is not Available\"</string>
    <!-- Spinner Country -->
    <string name="spinner_commission">Commission Type</string>
    <string name="spinner_value">Value Type</string>
</resources>
