<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    tools:context="com.chrs.iit.android.greg.joberfied.JobSeeker_Register">

    <LinearLayout
        android:id="@+id/linearLayout_jobSeeker_reg_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f02921"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/app_JobSeeker_regTitle"
            android:gravity="center"
            android:textColor="#ffffff"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            />
    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView_jobSeeker_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_jobSeeker_reg_title">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/iv_divider_jobSeeker_1"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="#f02921"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:id="@+id/et_jobseeker_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/app_JobSeeker_regFname"
                android:background="@drawable/roundshape_edittext"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:layout_below="@+id/iv_divider_jobSeeker_1"

                />
            <EditText
                android:id="@+id/et_jobseeker_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_jobseeker_fname"
                android:layout_marginTop="15dp"
                android:hint="@string/app_JobSeeker_regLname"
                android:background="@drawable/roundshape_edittext"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:maxLines="1"
                />
            <EditText
                android:id="@+id/et_jobseeker_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_jobseeker_lname"
                android:hint="@string/app_JobSeeker_regEmail"
                android:background="@drawable/roundshape_edittext"
                android:layout_marginTop="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/et_jobseeker_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_jobseeker_email"
                android:hint="@string/app_JobSeeker_regPass"
                android:background="@drawable/roundshape_edittext"
                android:layout_marginTop="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:inputType="textPassword"
                />
            <EditText
                android:id="@+id/et_jobseeker_repeatpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_jobseeker_pass"
                android:hint="@string/app_JobSeeker_regRepeatPass"
                android:background="@drawable/roundshape_edittext"
                android:layout_marginTop="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:maxLines="1"
                android:inputType="textPassword"
                />
            <Button
                android:id="@+id/btn_jobseeker_confirm_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_jobseeker_repeatpass"
                android:text="@string/app_JobSeeker_btnRegister"
                android:textColor="#ffffff"
                android:background="@drawable/roundshape_button"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />
            <ImageView
                android:id="@+id/iv_divider_jobSeeker_2"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="#f02921"
                android:layout_below="@+id/btn_jobseeker_confirm_reg"
                android:layout_marginTop="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#f02921"
                android:layout_below="@+id/iv_divider_jobSeeker_2"
                android:layout_marginTop="10dp"
                />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
