<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1abc9c"
    android:gravity="center"
    tools:context="com.chrs.iit.android.greg.joberfied.Main">

    <ScrollView
        android:id="@+id/scrollView_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp">
            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/iv_seagulls"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/seagulls"
                />
            <ImageView
                android:id="@+id/iv_jobSeeker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/job_seeker"
                android:layout_below="@id/iv_seagulls" />
            <ImageView
                android:id="@+id/iv_employer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/employer"
                android:layout_below="@+id/iv_jobSeeker"
                android:layout_marginTop="10dp" />
            <LinearLayout
                android:id="@+id/linearLayout_main"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_employer"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tv_quote"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_quote"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/tv_quote2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:text="@string/app_quote2"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/tv_quote3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:text="@string/app_quote3"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/tv_quote4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:text="@string/app_quote4"
                    android:layout_marginTop="20dp"
                    android:gravity="right"
                    android:layout_marginRight="70dp"
                    />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</FrameLayout>
