<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    tools:context="com.chrs.iit.android.greg.joberfied.Employer_Register">
    <LinearLayout
        android:id="@+id/linearLayout_Employer_reg_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f02921"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/app_JobSeeker_regTitle"
            android:gravity="center"
            android:textColor="#ffffff"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            />
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollView_employer_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_Employer_reg_title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/iv_divider_employer_1"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="#f02921"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:id="@+id/et_employer_companyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_Employer_regCompanyName"
                android:background="@drawable/roundshape_edittext"
                android:layout_marginTop="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:gravity="center"
                android:layout_below="@id/iv_divider_employer_1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            <LinearLayout
                android:id="@+id/employer_linearLayout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@+id/et_employer_companyName"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >
            <EditText
                android:id="@+id/et_employer_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="5dp"
                android:hint="@string/app_JobSeeker_regFname"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/roundshape_edittext"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:layout_weight=".5"
                />
            <EditText
                android:id="@+id/et_employer_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/app_JobSeeker_regLname"
                android:background="@drawable/roundshape_edittext"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:gravity="center"
                android:singleLine="true"
                android:layout_weight=".5"
                />
            </LinearLayout>
            <EditText
                android:id="@+id/et_employer_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/employer_linearLayout_name"
                android:hint="@string/app_Employer_regContactNum"
                android:background="@drawable/roundshape_edittext"
                android:layout_marginTop="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:inputType="phone"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <LinearLayout
                android:id="@+id/linearLayout_employer_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_employer_mobile"
                android:gravity="center"
                android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tv_employer_calltime_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_Employer_regCallTime"
                android:textSize="20sp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp"
                />
                <TextView
                    android:id="@+id/tv_employer_calltime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-- : --  --"
                    android:textSize="24sp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:gravity="center"
                    android:background="@drawable/roundshape_edittext"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    />
            </LinearLayout>
            <EditText
                android:id="@+id/et_employer_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout_employer_time"
                android:hint="@string/app_JobSeeker_regEmail"
                android:background="@drawable/roundshape_edittext"
                android:layout_marginTop="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <Button
                android:id="@+id/btn_employer_confirm_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_employer_email"
                android:text="@string/app_JobSeeker_btnRegister"
                android:textColor="#ffffff"
                android:background="@drawable/roundshape_button"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            <ImageView
                android:id="@+id/iv_divider_employer_2"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="#f02921"
                android:layout_below="@+id/btn_employer_confirm_reg"
                android:layout_marginTop="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#f02921"
                android:layout_below="@+id/iv_divider_employer_2"
                android:layout_marginTop="10dp"
                />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
